prototype/static/src/containers/App/styles/app.scss
/* ... */
.page-view #requests .request-table .request_list_item .panel-title {
	font-size: 12px;	
	background-color: #FFFFFF;
	padding-left: 0 !important;
	padding-right: 0 !important;
	border-radius: 0;
	border: none;
	border-top: 1px solid #D8D8D8;
}

.page-view #requests .request-table .request_list_item .panel-title a {
	display: block;
	background-color: #FFFFFF;
	height: 100%;
	padding-top: 40px;
	border-bottom: 1px solid #D8D8D8;	
	font-weight: 600;
}

.page-view #requests .request-table .request_list_item .panel-body {
	margin: 0 !important;
	padding: 0 !important;
	padding-top: 24px !important;
	padding-bottom: 32px !important;
	padding-left: 8.3333% !important;

	font-size: 16px;
}


.page-view #requests .request-table .request_list_item img.expand {
	position: relative;
	top: -1px;
	width: 24px;
}

.page-view #requests .request-table .request_list_item img.calendar {
	position: relative;
	top: -1px;
	width: 16px;
	height: auto;
	margin-right: 4px;
}

.page-view #requests .request-table .request_list_item img.pin {
	position: relative;
	top: -1px;	
	width: 16px;
	height: auto;
	margin-right: 4px;
}

.page-view #requests .request-table .request_list_item .status_tag img {
	height: 24px;
	position: relative;
	top: -5px;
}

.page-view #requests .request-table .request_list_item .accommodation_name {
	font-size: 16px;
	font-weight: 600;
}

// ------
// MAIN CONTENT PAGES
// ------

.contact-recruiter {
	margin-top: 30px;
}

.contact-recruiter a {
	font-size: 16px;
	font-weight: 600;
	color: #0000ff;
}

.contact-recruiter a:hover,
.contact-recruiter a:focus,
.contact-recruiter a:active {
	color: #0000ff;
}

.contact-recruiter img {
	width: 18px;
	margin-right: 11px;
}


// ------
// ACCOMMODATIONS MODAL
// ------

#accommodations-modal .modal-dialog {
	width: 800px;
}

#accommodations-modal .modal-dialog .modal-content {
	background-color: #ffffff;
	border-radius: 0px;
}

#accommodations-modal .modal-dialog .modal-content .modal-body {
	padding: 0 !important;
	margin: 0 !important;
}

// Header

#accommodations-modal .modal-dialog .modal-content .modal-header {
	height: 60px;
	padding: 0;
	margin: 0;
}

#accommodations-modal .modal-dialog .modal-content .modal-header .container {
	margin: 0 !important;
	padding: 0 !important;
	width: 100%;
	height: 60px;
}

#accommodations-modal .modal-dialog .modal-content .modal-header .container .row {
	margin: 0 !important;
	padding: 0 !important;
	height: 60px;
}


#accommodations-modal .modal-dialog .modal-content .modal-header img#a11y_icon {
	display: inline-block;
	position: relative;
	top: -3px;
	width: 24px;
	height: 24px;
	margin-left: 8px;
	margin-right: 12px;
}

#accommodations-modal .modal-dialog .modal-content .modal-header h4 {
	display: inline-block;
	font-family: Roboto;
	font-weight: 600;
	font-size: 18px;
	color: #000000;
	margin: 0;
	margin-top: 22px;	
}

// Search

#accommodations-modal .modal-dialog .modal-content .modal-header #search {
	width: 100%;
	height: 60px;
}

#accommodations-modal .modal-dialog .modal-content .modal-header #search input {
	width: 100%;
	height: 100%;
	border: none;
	padding-left: 32px;
	padding-top: 8px;
	border-left: solid 1px #E6E6E6;
	border-bottom: solid 1px #E6E6E6;
}

#accommodations-modal .modal-dialog .modal-content .modal-header #search input,
#accommodations-modal .modal-dialog .modal-content .modal-header #search input::placeholder {
	font-family: Roboto-Regular;
	font-size: 16px;
	color: #B3B3B3;
	font-weight: 400;
}

#accommodations-modal .modal-dialog .modal-content .modal-header #search input::placeholder {
	color: #B3B3B3;
}

#accommodations-modal .modal-dialog .modal-content .modal-header #search input {
	color: #000000;
}

#accommodations-modal .modal-dialog .modal-content .modal-header #search img {
	width: 22px;
	display: block;
	position: absolute;
	right: 0;
	margin: 0;
	margin-right: 24px;
	top: 22px;
}

// Close
#accommodations-modal .modal-dialog .modal-content .modal-header button.close,
#contact-modal .modal-dialog .modal-content .modal-header button.close {
	opacity: 1;
	margin: 0;
	padding: 0;
	width: 60px;
	height: 60px;
	color: #808080;
	border-left: solid 1px #E6E6E6;
	border-bottom: solid 1px #E6E6E6;
	border-radius: 0 !important;
}

#accommodations-modal .modal-dialog .modal-content .modal-header button.close:hover,
#contact-modal .modal-dialog .modal-content .modal-header button.close:hover {
	opacity: 1;
	margin: 0;
	padding: 0;
	width: 60px;
	height: 60px;
	color: #1D1D1D;
	border-left: solid 1px #E6E6E6;
	border-bottom: solid 1px #E6E6E6;
}

#accommodations-modal .modal-dialog .modal-content .modal-header button.close:active,
#contact-modal .modal-dialog .modal-content .modal-header button.close:active {
	background-color: #f7f7f7;
}

#accommodations-modal .modal-dialog .modal-content .modal-header button.close span,
#contact-modal .modal-dialog .modal-content .modal-header button.close span {
	font-size: 36px;
	font-weight: 400;
	text-shadow: none;
}

// Category Tabs

#accommodations-modal .modal-dialog .modal-content .modal-body ul.nav {
	height: 60px;
	background-color: #1D1D1D;
	border: none;
	box-shadow: 0 3px 10px 0 rgba(0,0,0,0.37);	
	padding-left: 60px;
}

#accommodations-modal .modal-dialog .modal-content .modal-body ul.nav-tabs li {
	height: 60px;
	background-color: #1D1D1D;
	font-size: 14px;
	font-weight: 600;
	text-transform: uppercase;
	padding: 0 !important;
	margin: 0 !important;
	border: none;
	border-radius: 0;
}

#accommodations-modal .modal-dialog .modal-content .modal-body ul.nav-tabs li a {
	padding: 0 !important;
	margin: 0 !important;
	height: 60px;
	color: #B3B3B3;
	border: none;
	margin-top: 18px !important;
	margin-left: 16px !important;
	margin-right: 16px !important;		
}
/* ... */

